--- a/client/nav.jade
+++ b/client/nav.jade
@@ -6,9 +6,14 @@
         span.icon-bar
         span.icon-bar
         span.icon-bar
-      a.navbar-brand(href='/') MEAN Template
+      a.navbar-brand(href='/') enlighTN
 
     .collapse.navbar-collapse#bs-navbar-collapse
       ul.nav.navbar-nav.navbar-right
-        li: a(href='/#/') Home
+        li: a(href='/#/') Splash
+        li: a(href='/#/home') Home
+        li: a(href='/#/dashboard') Dashboard
+        li: a(href='/#/event/3') Event 3
+        li: a(href='/#/location/index') Locations
+        li: a(href='/#/location/85') Location 85
 
