--- a/client/nav.jade
+++ b/client/nav.jade
@@ -13,7 +13,7 @@
         li: a(href='/#/') Splash
         li: a(href='/#/home') Home
         li: a(href='/#/dashboard') Dashboard
-        li: a(href='/#/event/3') Event 3
-        li: a(href='/#/location/index') Locations
-        li: a(href='/#/location/85') Location 85
+        li: a(href='/#/events/3') Event 3
+        li: a(href='/#/locations') Locations
+        li: a(href='/#/locations/85') Location 85
 
