event page, loc page, locations index receiving data from mongo

--- a/client/nav.jade
+++ b/client/nav.jade
@@ -13,7 +13,7 @@
         li: a(href='/#/') Splash
         li: a(href='/#/home') Home
         li: a(href='/#/dashboard') Dashboard
-        li: a(href='/#/events/3') Event 3
+        li: a(href='/#/events/541499095ffde801d2311eaa') Event Example
         li: a(href='/#/locations') Locations
-        li: a(href='/#/locations/85') Location 85
+        li: a(href='/#/locations/a00000000000000000000001') Location Example
 
