--- a/client/views/locations/locations.jade
+++ b/client/views/locations/locations.jade
@@ -1,3 +1,3 @@
 h3 {{title}}
 
-h4(ng-repeat='loc in locations') {{loc.name}}
+h4(ng-repeat='loc in locations'): a(href='/#/locations/{{loc._id}}') {{loc.title}} ({{loc.group}})
