framed the locations/:locId page, added a bootstrap dependancy, created a reflection slider

--- a/client/views/location/location.jade
+++ b/client/views/location/location.jade
@@ -1,2 +1,47 @@
 h3 {{title}}
+.row
+  .col-xs-6
+    #info
+      h4 123 Awesome Street,
+      h4 Nashville TN 37206
+      h5 coolwebsite.com
+      h6 Hours
+      p Mon- Fri 10-8
+  .col-xs-6
+    .img.thumbnail#street-shot
+.row
+  .col-xs-6
+    #events-list
+      h5 Events
+      ul
+        li Shindig
+        li Cow Tipping
+        li Square Dance Festival
+  .col-xs-6
+    #description
+      p Authors often misinterpret the biplane as an earthly lightning, when in actuality it feels more like a cruder clipper. The immense wool reveals itself as an unurged night to those who look. Some posit the manic step-daughter to be less than infect. However, some posit the agley belgian to be less than seely. We can assume that any instance of a resolution can be construed as a stepwise piano.
+
+//when we have reflections we will do 'reflection in reflections' and it will slide thru them.
+#slides_control
+  div
+    carousel(interval='myInterval')
+      slide.slide(ng-repeat='slide in slides', active='slide.active')
+        .reflection
+          img.reflection-badge(src='http://fc09.deviantart.net/fs70/f/2012/224/4/c/profile_picture_by_thevideogameguy-d5ateip.png')
+          p.text-center himynameis
+          h3 This is what I think.
+          .think
+            p The literature would have us believe that a nimbused fold is not but a drama. The competition of a yarn becomes a zonate samurai. Few can name a neuter ear that isn't an outsize loaf. However, their kale was, in this moment, a grainy dinosaur.
+        .reflection
+          img.reflection-badge(src='http://fc00.deviantart.net/fs70/f/2012/046/8/7/profile_picture_by_collinwing-d4pvsta.png')
+          p.text-center mrsbojackhorseman
+          h3 This is what I think.
+          .think
+            p Their lycra was, in this moment, a tempered hat. A caitiff panther is a defense of the mind. If this was somewhat unclear, the activity is a salmon. Unfortunately, that is wrong; on the contrary, a freckle is a toe from the right perspective.
+        .reflection
+          img.reflection-badge(src='http://fc05.deviantart.net/fs71/f/2011/228/6/0/profile_picture_by_elliotxclaris-d46tzdj.png')
+          p.text-center youwish
+          h3 This is what I think.
+          .think
+            p A siamese can hardly be considered a dirty whip without also being a paul. The prepared of an afterthought becomes a guileless work. An arrow is a fifth from the right perspective. They were lost without the presto sphere that composed their creator.
 
