sticky nav on location show page

--- a/client/views/location/location.less
+++ b/client/views/location/location.less
@@ -69,3 +69,25 @@ a.carousel-control.left, a.carousel-control.right {
   margin: 0 auto;
   border: 1px dotted black;
 }
+.fake-nav{
+  h3 {
+    width: 100%;
+    padding-left: 13%;
+    background-color: steelblue;
+    color: white;
+    margin: 0;
+  }
+  ul {
+    float: right;
+    list-style: none;
+    margin-top: -15px;
+
+    li a {
+      color: white;
+    }
+    li a:hover {
+      color: lighten(red, 10%);
+      background-color: transparent;
+    }
+  }
+}
