--- a/client/views/location/location.jade
+++ b/client/views/location/location.jade
@@ -1,4 +1,9 @@
-h3 {{title}}
+.fake-nav.navbar-fixed-top(role='navigation')
+  h3.navbar-brand 
+    {{title}}
+    ul.nav.navbar-nav
+      li: a#favorite(href='javascript:void(0)'): i.fa.fa-fw.fa-heart
+      li: a#comment(href='javascript:void(0)'): i.fa.fa-fw.fa-comment
 .row
   .col-xs-6
     #info
