put locations data in table, edited db errors(lat/lng inside the address on one)

--- a/client/views/locations/locations.jade
+++ b/client/views/locations/locations.jade
@@ -2,6 +2,14 @@ h3.text-center {{title}}
 .row
   #map
 .row
+  .col-xs-12
+    form.form#change-zip(name='changeZipForm', role='form', novalidate)
+      .form-group
+        label(for='zip') Need a different Zip code?
+          input.form-control.col-xs-2#zip(ng-model='zip', ng-pattern='/^[0-9]{5}$/', type='text', name='zip')
+
+
+.row
   table.table.table-hover
     thead
       th Name
