--- a/client/index.jade
+++ b/client/index.jade
@@ -25,6 +25,7 @@ html(ng-app='enlighTN', lang='en')
     script(src='/vendor/bootstrap/dist/js/bootstrap.js')
     script(src='/vendor/angular-bootstrap/ui-bootstrap-tpls.min.js')
     script(src='/vendor/underscore/underscore.js')
+    script(src='https://maps.googleapis.com/maps/api/js?key=AIzaSyANcr_9Ku36Y9xZ3UoISclGCKhIW7p-0bc&sensor=true&v=3&libraries=geometry')
     script(src='/index.js')
     script(src='/views/home/home.js')
     script(src='/views/splash/splash.js')
