fixed a bug in slider

--- a/client/views/location/location.jade
+++ b/client/views/location/location.jade
@@ -7,8 +7,7 @@
 .row
   .col-xs-6
     #info
-      h4 123 Awesome Street,
-      h4 Nashville TN 37206
+      h4 {{loc.address}}
       h5 coolwebsite.com
       h6 Hours
       p Mon- Fri 10-8
@@ -26,7 +25,6 @@
     #description
       p Authors often misinterpret the biplane as an earthly lightning, when in actuality it feels more like a cruder clipper. The immense wool reveals itself as an unurged night to those who look. Some posit the manic step-daughter to be less than infect. However, some posit the agley belgian to be less than seely. We can assume that any instance of a resolution can be construed as a stepwise piano.
 
-//when we have reflections we will do 'reflection in reflections' and it will slide thru them.
 #slides_control
   div
     carousel(interval='myInterval')
