--- a/client/index.less
+++ b/client/index.less
@@ -1,7 +1,16 @@
 body{
   background-color: #ffffff;
 }
-
+.container-fluid {
+  background-color: #eee;
+}
 .snippet{
   background-color: #aaaaaa;
+}
+#menu.btn, #menu.btn:hover, #menu.btn:focus {
+  background-color: transparent;
+  border: none;
+  margin-left: -117px;
+  outline: none;
+  z-index: 100;
 }
