--- a/client/views/location/location.less
+++ b/client/views/location/location.less
@@ -77,7 +77,7 @@ a.carousel-control.left, a.carousel-control.right {
     color: white;
     margin: 0;
   }
-  ul {
+  .favoritebar {
     float: right;
     list-style: none;
     margin-top: -15px;
