--- a/client/views/location/location.jade
+++ b/client/views/location/location.jade
@@ -1,7 +1,7 @@
 .fake-nav.navbar-fixed-top(role='navigation')
   h3.navbar-brand 
     {{title}}
-    ul.nav.navbar-nav
+    ul.nav.navbar-nav.favoritebar
       li: a#favorite(href='javascript:void(0)'): i.fa.fa-fw.fa-heart
       li: a#comment(href='javascript:void(0)'): i.fa.fa-fw.fa-comment
 .row
