map displays on location page

--- a/client/index.jade
+++ b/client/index.jade
@@ -12,6 +12,7 @@ html(ng-app='enlighTN', lang='en')
     link(href='/vendor/ng-table/ng-table.min.css', rel='stylesheet')
     link(href='/index.css', rel='stylesheet')
     link(href='/nav.css', rel='stylesheet')
+    link(href='/components/directives/en-map/en-map.css', rel='stylesheet')
     link(href='/views/home/home.css', rel='stylesheet')
     link(href='/views/location/location.css', rel='stylesheet')
   body
@@ -55,4 +56,5 @@ html(ng-app='enlighTN', lang='en')
     script(src='/components/factories/reflection.js')
     script(src='/components/factories/event.js')
     script(src='/components/factories/user.js')
+    script(src='/components/directives/en-map/en-map.js')
 
