--- a/client/index.jade
+++ b/client/index.jade
@@ -13,6 +13,7 @@ html(ng-app='enlighTN', lang='en')
     link(href='/index.css', rel='stylesheet')
     link(href='/nav.css', rel='stylesheet')
     link(href='/components/directives/en-map/en-map.css', rel='stylesheet')
+    link(href='/components/directives/en-locate/en-locate.css', rel='stylesheet')
     link(href='/views/home/home.css', rel='stylesheet')
     link(href='/views/location/location.css', rel='stylesheet')
   body
@@ -57,4 +58,5 @@ html(ng-app='enlighTN', lang='en')
     script(src='/components/factories/event.js')
     script(src='/components/factories/user.js')
     script(src='/components/directives/en-map/en-map.js')
+    script(src='/components/directives/en-locate/en-locate.js')
 
