i am pushing something

--- a/client/views/locations/locations.jade
+++ b/client/views/locations/locations.jade
@@ -1,6 +1,6 @@
 h3.text-center {{title}}
 .row
-  #map
+  #map(en-map, lat=0, lng=0, zoom=4)
 .row
   .col-xs-12
     form.form#change-zip(name='changeZipForm', role='form', novalidate)
