--- a/client/index.jade
+++ b/client/index.jade
@@ -9,6 +9,7 @@ html(ng-app='enlighTN', lang='en')
     link(href='/vendor/fontawesome/css/font-awesome.css', rel='stylesheet')
     link(href='/vendor/snapjs/snap.css', rel='stylesheet')
     link(href='/vendor/angular-snap/angular-snap.min.css', rel='stylesheet')
+    link(href='/vendor/ng-table/ng-table.min.css', rel='stylesheet')
     link(href='/index.css', rel='stylesheet')
     link(href='/nav.css', rel='stylesheet')
     link(href='/views/home/home.css', rel='stylesheet')
@@ -29,8 +30,9 @@ html(ng-app='enlighTN', lang='en')
     script(src='/vendor/bootstrap/dist/js/bootstrap.js')
     script(src='/vendor/angular-bootstrap/ui-bootstrap-tpls.min.js')
     script(src='/vendor/underscore/underscore.js')
-    script(src='/vendor/snapjs/snap.js')
-    script(src='/vendor/angular-snap/angular-snap.js')
+    script(src='/vendor/snapjs/snap.min.js')
+    script(src='/vendor/angular-snap/angular-snap.min.js')
+    script(src='/vendor/ng-table/ng-table.min.js')
     script(src='/vendor/underscore/underscore.js')
     script(src='https://maps.googleapis.com/maps/api/js?key=AIzaSyANcr_9Ku36Y9xZ3UoISclGCKhIW7p-0bc&sensor=true&v=3&libraries=geometry')
     script(src='/index.js')
