location map centered on user

--- a/client/views/locations/locations.jade
+++ b/client/views/locations/locations.jade
@@ -1,14 +1,7 @@
 h3.text-center {{title}}
 .row
-  #map(en-map, lat='{{pos.lat}}', lng='{{pos.lng}}', zoom=6)
-.row
-  .col-xs-12
-    form.form#change-zip(name='changeZipForm', role='form', novalidate)
-      .form-group
-        label(for='zip') Need a different Zip code?
-          input.form-control#zip(ng-model='zip', ng-pattern='/^[0-9]{5}$/', type='text', name='zip')
-          button.btn.btn-success Change
-
+  #map(en-map, lat='{{pos.lat}}', lng='{{pos.lng}}', zoom=8)
+  div(en-locate)
 .row
   table.table.table-hover
     thead
