--- a/client/views/locations/locations.jade
+++ b/client/views/locations/locations.jade
@@ -5,7 +5,7 @@ h3.text-center {{title}}
 .row
   table.table(ng-table='tableParams', show-filter='true')
     tbody
-      tr(ng-repeat='loc in locs', data-lat= '{{loc.lat}}', data-lng='{{loc.lng}}')
+      tr(ng-repeat='loc in locs', data-lat= '{{loc.lat}}', data-lng='{{loc.lng}}', data-title='{{loc.title}}')
         td(data-title="'Title'" filter="{ 'title': 'text' }"): a(href='/#/locations/{{loc._id}}') {{loc.title}}
         td(data-title="'Address'") {{loc.address}}
         td(data-title="'Type'", filter="{'type': 'text'}") {{loc.group}}
