--- a/client/views/locations/locations.jade
+++ b/client/views/locations/locations.jade
@@ -11,7 +11,7 @@ h3.text-center {{title}}
       tr(ng-repeat='loc in locs', data-lat= '{{loc.lat}}', data-lng='{{loc.lng}}', data-title='{{loc.title}}')
         td(data-title="'Title'" filter="{ 'title': 'text' }"): a(href='/#/locations/{{loc._id}}') {{loc.title}}
         td(data-title="'Address'") {{loc.address}}
-        td(data-title="'Type'", name="status", filter="{ 'name': 'select' }", filter-data="types($column)"){{loc.group}}
+        td(data-title="'Type'", filter="{ 'group': 'select' }", filter-data="groups($column)") {{loc.group}}
         td(data-title="'Distance'", sortable="'distance'") calculation here
         td(data-title="'Popularity'", sortable="'favorites'") {{loc.favorites.length}}
 
