--- a/client/nav.jade
+++ b/client/nav.jade
@@ -9,7 +9,7 @@
 
   ul.nav.navbar-nav#navigation(ng-show='email')
     li
-      a(href='/') Home
+      a(href='/home') Home
     li
       a(href='/#/logout') Logout
     li
