--- a/client/views/home/home.jade
+++ b/client/views/home/home.jade
@@ -1,3 +1,19 @@
-.snippet
-  h3 Home Page!
+h3.text-center Upcoming Events
+.col-xs-1
+.col-xs-10
+  .events
+    h4 Today
+    .todays-events
+      p This is a totally cool event
+    h4 Later this week
+    .weekly-events
+      p This is also really cool, yo!
+      p But I also want to go to this!
+.col-xs-1
+.row.trending
+  .col-xs-6.twitter
+    h4.text-center Twitter Feed Here!
+  .col-xs-6.rss-feed
+    h4.text-center RSS Feed Here!
+
 
