--- a/client/views/splash/splash.jade
+++ b/client/views/splash/splash.jade
@@ -1,2 +1,29 @@
-h3 {{title}}
+.title-bar
+  h1 Music City, USA
+.hidden-forms
+  .register.pull-left
+    .row
+      .col-xs-12
+        h3 Register
+        form(role='form', novalidate, name='regUserForm')
+          .form-group
+            label(for='newEmail') Email
+            input.form-control#newEmail(type='email', name='newEmail', ng-model='regUser.email', autofocus, required)
+          .form-group
+            label(for='newPassword') Password
+            input.form-control#newPassword(type='password', name='newPassword', ng-model='regUser.password', required, ng-minlength='3')
+          button.btn.btn-primary(ng-show='regUserForm.$valid', ng-click='register()') Register
+  .login.pull-right
+    .row
+      .col-xs-12
+        h3 Login
+        form(role='form', novalidate, name='userForm')
+          .form-group
+            label(for='email') Email
+            input.form-control#email(type='email', name='email', ng-model='user.email', autofocus, required)
+          .form-group
+            label(for='password') Password
+            input.form-control#password(type='password', name='password', ng-model='user.password', required, ng-minlength='3')
+          button.btn.btn-primary(ng-show='userForm.$valid', ng-click='login()') Login
+.map-img
 
