splash page hide and show forms, navbar hover highlighting

--- a/client/index.jade
+++ b/client/index.jade
@@ -16,13 +16,19 @@ html(ng-app='enlighTN', lang='en')
     link(href='/components/directives/en-locate/en-locate.css', rel='stylesheet')
     link(href='/views/home/home.css', rel='stylesheet')
     link(href='/views/location/location.css', rel='stylesheet')
+    link(href='/views/splash/splash.css', rel='stylesheet')
   body
     include nav
     snap-content.container-fluid
+      .row.header-container(ng-controller='HomeCtrl')
+        .col-xs-10.header
+          h1.title {{art}} City, USA
+          h5.subtitle There is more to Nashville than Music.
+        .col-xs-2
       .row
         .col-xs-1
         .col-xs-10
-          button.btn.btn-default#menu(snap-toggle=''): i.fa.fa-fw.fa-bars.fa-2x
+          button.btn.btn-default#menu(snap-toggle=''): p MENU
           #container(ng-view)
         .col-xs-1
 
