--- a/client/index.less
+++ b/client/index.less
@@ -4,13 +4,34 @@ body{
 .container-fluid {
   background-color: #eee;
 }
-.snippet{
-  background-color: #aaaaaa;
-}
 #menu.btn, #menu.btn:hover, #menu.btn:focus {
   background-color: transparent;
   border: none;
   margin-left: -117px;
   outline: none;
   z-index: 100;
+}
+#menu p {
+  font-size: 18px;
+  font-weight: lighter;
+}
+.header-container {
+    border-bottom: 2px solid grey;
+
+  .header {
+    height: 150px;
+    margin-bottom: 40px;
+
+    .title {
+      font-size: 6em;
+      text-align: right;
+      color: dimgrey;
+    }
+    .subtitle {
+      font-size: 30px;
+      text-align: right;
+      color: grey;
+      font-weight: lighter;
+    }
+  }
 }
