styled nav links

--- a/client/index.jade
+++ b/client/index.jade
@@ -28,7 +28,7 @@ html(ng-app='enlighTN', lang='en')
       .row
         .col-xs-1
         .col-xs-10
-          button.btn.btn-default#menu(snap-toggle=''): p MENU
+          button.btn.btn-default#menu(snap-toggle=''): i.fa.fa-fw.fa-bars.fa-2x
           #container(ng-view)
         .col-xs-1
 
