--- a/client/index.less
+++ b/client/index.less
@@ -1,13 +1,15 @@
 body{
-  background-color: #ffffff;
+  background-color: whitesmoke;
 }
 .container-fluid {
-  background-color: #eee;
+  background-color: #fff;
 }
 #menu.btn, #menu.btn:hover, #menu.btn:focus {
   background-color: transparent;
   border: none;
-  margin-left: -117px;
+  position: relative;
+  left: -117px;
+  bottom: 180px;
   outline: none;
   z-index: 100;
 }
