--- a/client/views/splash/splash.less
+++ b/client/views/splash/splash.less
@@ -28,7 +28,12 @@
     }
   }
 
-
+  .map-img {
+    width: 100%;
+    height: 800px;
+    border: 1px solid black;
+    background-color: lightblue;
+  }
 
 
 }
