--- a/client/index.jade
+++ b/client/index.jade
@@ -10,6 +10,7 @@ html(ng-app='enlighTN', lang='en')
     link(href='/vendor/snapjs/snap.css', rel='stylesheet')
     link(href='/vendor/angular-snap/angular-snap.min.css', rel='stylesheet')
     link(href='/vendor/ng-table/ng-table.min.css', rel='stylesheet')
+    link(href='/vendor/toastr/toastr.min.css', rel='stylesheet')
     link(href='/index.css', rel='stylesheet')
     link(href='/nav.css', rel='stylesheet')
     link(href='/components/directives/en-map/en-map.css', rel='stylesheet')
@@ -42,7 +43,7 @@ html(ng-app='enlighTN', lang='en')
     script(src='/vendor/angular-snap/angular-snap.min.js')
     script(src='/vendor/ng-table/ng-table.min.js')
     script(src='/vendor/underscore/underscore.js')
-    script(src='/vendor/toastr/toastr.js')
+    script(src='/vendor/toastr/toastr.min.js')
     script(src='/vendor/localforage/dist/localforage.js')
     script(src='/vendor/angular-localforage/dist/angular-localForage.js') 
     script(src='https://maps.googleapis.com/maps/api/js?key=AIzaSyANcr_9Ku36Y9xZ3UoISclGCKhIW7p-0bc&sensor=true&v=3&libraries=geometry')
