all events printing on event index

--- a/client/nav.jade
+++ b/client/nav.jade
@@ -9,7 +9,7 @@
 
   ul.nav.navbar-nav#navigation(ng-show='email')
     li
-      a(href='/home'): i.fa.fa-fw.fa-home.fa-2x &nbsp home
+      a(href='/#/home'): i.fa.fa-fw.fa-home.fa-2x &nbsp home
     li
       a(href='/#/logout'): i.fa.fa-fw.fa-sign-out.fa-2x &nbsp logout
     li
