--- a/client/views/home/home.less
+++ b/client/views/home/home.less
@@ -1,8 +1,14 @@
-.events {
-  padding: 20px;
-  border: 1px solid black;
-  background-color: white;
+.current {
+  border: 7px solid #E4A9E4;
+  background-color: rgb(238, 201, 238);
+  height: 300px;
+  overflow: auto;
+
+  .events {
+    padding: 20px;
+  }
 }
+
 .trending {
 }
 .twitter, .rss-feed {
