the location index layout is done

--- a/client/components/directives/en-locate/en-locate.jade
+++ b/client/components/directives/en-locate/en-locate.jade
@@ -1,1 +1,1 @@
-button.btn.btn-primary(ng-click='findMe()') Find Me
+button.btn.btn-primary(ng-click='findMe()'): i.fa.fa-fw.fa-2x.fa-location-arrow &nbsp Find My Location
