--- a/client/views/location/location.jade
+++ b/client/views/location/location.jade
@@ -1,7 +1,7 @@
-h3 {{title}}
-  ul
-    li: a#favorite(href='javascript:void(0)'): i.fa.fa-fw.fa-heart
-    li: a#comment(href='javascript:void(0)'): i.fa.fa-fw.fa-comment
+h3.loc-title {{title}}
+ul.interact-btns
+  li: a#favorite(href='javascript:void(0)'): i.fa.fa-fw.fa-heart
+  li: a#comment(href='javascript:void(0)'): i.fa.fa-fw.fa-comment
 .row
   .col-xs-6
     #info
@@ -13,15 +13,15 @@ h3 {{title}}
     .img.thumbnail#street-shot
 .row
   .col-xs-6
+    #description
+      p Authors often misinterpret the biplane as an earthly lightning, when in actuality it feels more like a cruder clipper. The immense wool reveals itself as an unurged night to those who look. Some posit the manic step-daughter to be less than infect. However, some posit the agley belgian to be less than seely. We can assume that any instance of a resolution can be construed as a stepwise piano.
+  .col-xs-6
     #events-list
       h5 Events
       ul
         li Shindig
         li Cow Tipping
         li Square Dance Festival
-  .col-xs-6
-    #description
-      p Authors often misinterpret the biplane as an earthly lightning, when in actuality it feels more like a cruder clipper. The immense wool reveals itself as an unurged night to those who look. Some posit the manic step-daughter to be less than infect. However, some posit the agley belgian to be less than seely. We can assume that any instance of a resolution can be construed as a stepwise piano.
 
 #slides_control
   div
