--- a/client/index.jade
+++ b/client/index.jade
@@ -17,6 +17,7 @@ html(ng-app='enlighTN', lang='en')
     link(href='/components/directives/en-locate/en-locate.css', rel='stylesheet')
     link(href='/views/home/home.css', rel='stylesheet')
     link(href='/views/location/location.css', rel='stylesheet')
+    link(href='/views/locations/locations.css', rel='stylesheet')
     link(href='/views/splash/splash.css', rel='stylesheet')
   body
     include nav
