--- a/client/views/splash/splash.less
+++ b/client/views/splash/splash.less
@@ -1,9 +1,13 @@
+
 #splash {
+  //background-image: url('/assets/map.png');
+  width: 1000px;
+  height: 800px;
+  background-repeat: no-repeat;
 
   .hidden-forms {
     overflow: visible;
     height: 40px;
-    position: relative;
     bottom: 50px;
 
     .register{
@@ -11,6 +15,12 @@
         position: relative;
         bottom: 15px;
         text-align: right;
+        font-size: 40px;
+        font-weight: lighter;
+      }
+      h3 > form {
+        background-color: white;
+        padding: 0 20px;
       }
       h3:hover, h3:active {
         cursor: pointer;
@@ -21,6 +31,8 @@
         position: relative;
         bottom: 15px;
         text-align: left;
+        font-size: 40px;
+        font-weight: lighter;
       }
       h3:hover, h3:active {
         cursor: pointer;
@@ -34,6 +46,4 @@
     border: 1px solid black;
     background-color: lightblue;
   }
-
-
 }
