configured side navigation to not drag or close on click

--- a/client/index.jade
+++ b/client/index.jade
@@ -40,7 +40,7 @@ html(ng-app='enlighTN', lang='en')
     script(src='/vendor/bootstrap/dist/js/bootstrap.js')
     script(src='/vendor/angular-bootstrap/ui-bootstrap-tpls.min.js')
     script(src='/vendor/underscore/underscore.js')
-    script(src='/vendor/snapjs/snap.min.js')
+    script(src='/vendor/snapjs/snap.js')
     script(src='/vendor/angular-snap/angular-snap.min.js')
     script(src='/vendor/ng-table/ng-table.min.js')
     script(src='/vendor/underscore/underscore.js')
