added Raleway font

--- a/client/index.less
+++ b/client/index.less
@@ -1,5 +1,13 @@
+@import url(http://fonts.googleapis.com/css?family=Raleway:400,200,600,800);
+
+@bold-wt: 800;
+@semi-wt: 600;
+@norm-wt: 400;
+@lite-wt: 300;
+
 body{
   background-color: whitesmoke;
+  font-family: 'Raleway', sans-serif;
 }
 .container-fluid {
   background-color: #fff;
