--- a/client/views/home/home.less
+++ b/client/views/home/home.less
@@ -24,6 +24,7 @@
     background-color: rgb(244, 255, 185);
     padding: 20px;
     margin: 40px 0;
+    overflow: scroll;
   }
   .twitter h2, .rss-feed h2 {
     font-weight: lighter;
@@ -43,9 +44,8 @@
     color: rgba(202, 35, 35, 0.55);
   }
   .rss-feed h2 {
-    bottom: -60px;
-    right: 250px;
+    bottom: -75px;
+    right: 175px;
     color: rgba(202, 35, 35, 0.55);
   }
 }
-
