--- a/client/index.jade
+++ b/client/index.jade
@@ -19,6 +19,7 @@ html(ng-app='enlighTN', lang='en')
     link(href='/views/location/location.css', rel='stylesheet')
     link(href='/views/locations/locations.css', rel='stylesheet')
     link(href='/views/splash/splash.css', rel='stylesheet')
+    link(href='/components/directives/kj-parse/kj-parse.css', rel='stylesheet')
   body
     include nav
     snap-content.container-fluid
@@ -43,6 +44,7 @@ html(ng-app='enlighTN', lang='en')
     script(src='/vendor/snapjs/snap.js')
     script(src='/vendor/angular-snap/angular-snap.min.js')
     script(src='/vendor/ng-table/ng-table.min.js')
+    script(src='/vendor/angular-sanitize/angular-sanitize.min.js')
     script(src='/vendor/underscore/underscore.js')
     script(src='/vendor/toastr/toastr.min.js')
     script(src='/vendor/localforage/dist/localforage.js')
@@ -67,4 +69,6 @@ html(ng-app='enlighTN', lang='en')
     script(src='/components/factories/user.js')
     script(src='/components/directives/en-map/en-map.js')
     script(src='/components/directives/en-locate/en-locate.js')
+    script(src='/components/directives/kj-parse/kj-parse.js')
+
 
