--- a/client/index.less
+++ b/client/index.less
@@ -6,7 +6,7 @@
 @lite-wt: 300;
 
 body{
-  background-color: whitesmoke;
+  background-color: #fff;
   font-family: 'Raleway', sans-serif;
 }
 .container-fluid {
@@ -16,17 +16,19 @@ body{
   background-color: transparent;
   border: none;
   position: relative;
-  left: -117px;
-  bottom: 180px;
+  left: -10px;
+  bottom: 160px;
   outline: none;
   z-index: 100;
+  color: white;
 }
 #menu p {
   font-size: 18px;
   font-weight: lighter;
 }
 .header-container {
-    border-bottom: 2px solid grey;
+    border-bottom: 2px solid #5A965D;
+    background-color: #72BE75;
 
   .header {
     height: 150px;
@@ -35,12 +37,12 @@ body{
     .title {
       font-size: 6em;
       text-align: right;
-      color: dimgrey;
+      color: white;
     }
     .subtitle {
       font-size: 30px;
       text-align: right;
-      color: grey;
+      color: white;
       font-weight: lighter;
     }
   }
