--- a/client/nav.less
+++ b/client/nav.less
@@ -4,6 +4,9 @@ ul#navigation {
 #navigation > li {
   float: none;
 }
+#navigation a {
+  color: #5A965D !important;
+}
 .fa {
   display: inline !important;
 }
