--- a/client/views/splash/splash.less
+++ b/client/views/splash/splash.less
@@ -1,9 +1,10 @@
 
 #splash {
-  //background-image: url('/assets/map.png');
-  width: 1000px;
+  background-image: url('/assets/art.jpg');
+  background-size: cover;
+  width: 100%;
   height: 800px;
-  background-repeat: no-repeat;
+  overflow: visible;
 
   .hidden-forms {
     overflow: visible;
@@ -25,6 +26,10 @@
       h3:hover, h3:active {
         cursor: pointer;
       }
+      label {
+        font-size: 20px;
+        font-weight: lighter;
+      }
     }
     .login{
       h3 {
@@ -36,6 +41,10 @@
       }
       h3:hover, h3:active {
         cursor: pointer;
+      }
+      label {
+        font-size: 20px;
+        font-weight: lighter;
       }
     }
   }
