login/register page styled

--- a/client/views/splash/splash.less
+++ b/client/views/splash/splash.less
@@ -8,7 +8,8 @@
 
   .hidden-forms {
     overflow: visible;
-    height: 40px;
+    background-color: rgba(252, 253, 241, 0.38);
+    height: 300px;
     bottom: 50px;
 
     .register{
@@ -18,6 +19,7 @@
         text-align: right;
         font-size: 40px;
         font-weight: lighter;
+        color: #96418B;
       }
       h3 > form {
         background-color: white;
@@ -28,7 +30,6 @@
       }
       label {
         font-size: 20px;
-        font-weight: lighter;
       }
     }
     .login{
@@ -38,13 +39,13 @@
         text-align: left;
         font-size: 40px;
         font-weight: lighter;
+        color: #96418B;
       }
       h3:hover, h3:active {
         cursor: pointer;
       }
       label {
         font-size: 20px;
-        font-weight: lighter;
       }
     }
   }
