inital layout of home page

--- a/client/index.less
+++ b/client/index.less
@@ -1,16 +1,12 @@
 @import url(http://fonts.googleapis.com/css?family=Raleway:400,200,600,800);
-
-@bold-wt: 800;
-@semi-wt: 600;
-@norm-wt: 400;
-@lite-wt: 300;
+@import './variables.less';
 
 body{
-  background-color: #fff;
+  background-color: @white;
   font-family: 'Raleway', sans-serif;
 }
 .container-fluid {
-  background-color: #fff;
+  background-color: @white;
 }
 #menu.btn, #menu.btn:hover, #menu.btn:focus {
   background-color: transparent;
@@ -24,11 +20,11 @@ body{
 }
 #menu p {
   font-size: 18px;
-  font-weight: lighter;
+  font-weight: @lite-wt;
 }
 .header-container {
-    border-bottom: 2px solid #5A965D;
-    background-color: #72BE75;
+    border-bottom: 2px solid @dkturquiose;
+    background-color: @turquiose;
 
   .header {
     height: 150px;
@@ -37,13 +33,13 @@ body{
     .title {
       font-size: 6em;
       text-align: right;
-      color: white;
+      color: @white;
     }
     .subtitle {
       font-size: 30px;
       text-align: right;
-      color: white;
-      font-weight: lighter;
+      color: @white;
+      font-weight: @lite-wt;
     }
   }
 }
