--- a/client/views/home/home.jade
+++ b/client/views/home/home.jade
@@ -1,18 +1,21 @@
 #home
   h1 Upcoming Events
-.row
-  .col-xs-1
-  .col-xs-10.current
-    .events(ng-repeat='event in events')
-      h4 {{event.name}}
-      p {{event.type}}
-  .col-xs-1
-.row.trending
-  .col-xs-5.twitter
-    h2.text-center Twitter
-  .col-xs-2
-  .col-xs-5.rss-feed.pull-right
-    h2.text-center RSS Feed
-    kj-parse(feeds='feeds')
+  .row
+    .col-xs-1
+    .col-xs-10.current
+      .col-xs-1
+      .events.col-xs-10
+        h4(ng-repeat='event in events') {{event.name}}
+      .col-xs-1
+    .col-xs-1
+  .row.trending
+    .col-xs-1
+    .col-xs-4.twitter
+      h2.text-center Twitter
+    .col-xs-2
+    .col-xs-4.rss-feed
+      h2.text-center RSS Feed
+      kj-parse(feeds='feeds')
+    .col-xs-1
 
 
